--- a/Teaching_assignment_MBL.ipynb
+++ b/Teaching_assignment_MBL.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Setup"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {
     "hideCode": false,
     "hidePrompt": false
@@ -17,7 +24,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_transition(Initial_state, Final_state):\n",
+    "    difference_cm = Initial_state.value - Final_state.value\n",
+    "    difference_nm = 10**7/difference_cm\n",
+    "\n",
+    "    print(f'There are {difference_cm} cm^-1 between {Initial_state.label} and {Final_state.label}.')\n",
+    "    print(f'This corresponds to {np.round(difference_nm,0)} nm.\\n\\n')\n",
+    "\n",
+    "\n",
+    "    x = np.linspace(300,900,1000)\n",
+    "    b = difference_nm\n",
+    "    a = 1\n",
+    "    c = 10\n",
+    "    f1 = a * np.exp(-(x-b)**2/(2*c**2))\n",
+    "    plt.figure(figsize = [10,5])\n",
+    "    plt.plot([b, b],[0, 2], '--', color = [0.8, 0.8, 0.8])\n",
+    "    plt.plot(x,f1, linewidth = 3, color = [0.6,0.6,0.6])\n",
+    "    plt.xlabel('Wavelength/nm')\n",
+    "    plt.ylabel('Intensity/A.U.')\n",
+    "    plt.xlim([450,650])\n",
+    "    plt.ylim([-0.005,1.02])\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "hideCode": false,
     "hidePrompt": false
@@ -43,6 +79,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Calculations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "hideCode": false,
     "hidePrompt": false
@@ -53,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {
     "hideCode": false,
     "hidePrompt": false,
@@ -62,62 +105,8 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": [
-       "IPython.notebook.execute_cells_below()"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "63155b04c7dd4c508fdef177b6d60d07",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='Initial_state:', index=6, options=(('F5', 2029), ('F4', 3275), ('F3', 4325), ('F2', 5035…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82da3e18dfa949ee86b1762f272f4388",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='Final_state:', options=(('F6', 0), ('F5', 2029), ('F4', 3275), ('F3', 4325), ('F2', 5035…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "605071e0a8b94f929a4a73e4574aca53",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='Calculate energy difference and find spectral position', layout=Layout(height='30px', widt…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7fd0158fa09f408ca98462b57a4306a3",
+       "model_id": "e06ab880e16341aeb9d30489ca7397f0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -131,7 +120,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "003dd7781a26491cbb6f00fd1b692b7f",
+       "model_id": "ad3a89ca78f748429fdc16cebb48e994",
        "version_major": 2,
        "version_minor": 0
       },
@@ -145,7 +134,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d54e7444f7640e89c8e9c412aff6e73",
+       "model_id": "2e0000ad55f744b7aa95c5f31616b6f8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -165,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {
     "hideCode": false,
     "hideOutput": false,
@@ -196,27 +185,15 @@
     }
    ],
    "source": [
-    "difference_cm = Initial_state.value - Final_state.value\n",
-    "difference_nm = 10**7/difference_cm\n",
-    "\n",
-    "print(f'There are {difference_cm} cm^-1 between {Initial_state.label} and {Final_state.label}.')\n",
-    "print(f'This corresponds to {np.round(difference_nm,0)} nm.\\n\\n')\n",
-    "\n",
-    "\n",
-    "x = np.linspace(300,900,1000)\n",
-    "b = difference_nm\n",
-    "a = 1\n",
-    "c = 10\n",
-    "f1 = a * np.exp(-(x-b)**2/(2*c**2))\n",
-    "plt.figure(figsize = [10,5])\n",
-    "plt.plot([b, b],[0, 2], '--', color = [0.8, 0.8, 0.8])\n",
-    "plt.plot(x,f1, linewidth = 3, color = [0.6,0.6,0.6])\n",
-    "plt.xlabel('Wavelength/nm')\n",
-    "plt.ylabel('Intensity/A.U.')\n",
-    "plt.xlim([450,650])\n",
-    "plt.ylim([-0.005,1.02])\n",
-    "plt.show()"
+    "plot_transition(Initial_state, Final_state)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
