--- a/Teaching_assignment_MBL.ipynb
+++ b/Teaching_assignment_MBL.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Setup"
+    "# Setup\n",
+    "To run this program correctly, start by clicking in the tab 'Kernel' and press 'Restart & Run All'. Afterwards, you can go move down to the next section 'Calculations' to use the actual program."
    ]
   },
   {
@@ -187,13 +188,6 @@
    "source": [
     "plot_transition(Initial_state, Final_state)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
