--- a/Teaching_assignment_MBL.ipynb
+++ b/Teaching_assignment_MBL.ipynb
@@ -92,7 +92,7 @@
     "hidePrompt": false
    },
    "source": [
-    "The following code can be used to calculate the energy difference between two electronic states of terbium$^{3+}$, which can help in interpreting a spectrum and assigning the correct transitions. Use the drag and drop menu to select an initial state (e.g. F0) and a final state (e.g. F6), which corresponds to the transition F$_0$ $\\rightarrow$ F$_6$. Press the button that says 'Calculate energy difference and find spectral position' underneath to run the code. This calculates the energy difference between the two states, and a figure displaying the spectral position is displayed. "
+    "The following code can be used to calculate the energy difference between two electronic states of terbium$^{3+}$, which can help in interpreting a spectrum and assigning the correct transitions. Use the dropdown menu to select an initial state (e.g. F0) and a final state (e.g. F6), which corresponds to the transition F$_0$ $\\rightarrow$ F$_6$. Press the button that says 'Calculate energy difference and find spectral position' underneath to run the code. This calculates the energy difference between the two states, and a figure displaying the spectral position is displayed. "
    ]
   },
   {
