--- a/Teaching_assignment_MBL.ipynb
+++ b/Teaching_assignment_MBL.ipynb
@@ -74,7 +74,7 @@
     "    display(Javascript('IPython.notebook.execute_cells_below()'))\n",
     "\n",
     "button = widgets.Button(description=\"Calculate energy difference and find spectral position\",\n",
-    "                       layout=widgets.Layout(width='350px', height='30px'))\n",
+    "                       layout=widgets.Layout(width='350px', height='30px'),style= {'button_color':'yellow'})\n",
     "button.on_click(run_all)"
    ]
   },
